# mrzecest

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.rst  environment.yml  pyproject.toml
conda.recipe/: meta.yaml
data/: README.md  hist_ndo.csv
example/: calc_planning_ec.py  ec_est_config.yaml  ec_est_example.py  ec_est_params.yaml  fitting_config.yaml  fitting_example.html  fitting_example.py
example/data/: README.md  hypothetical_ndo.csv  mrz_hist_stage.csv  plot_data.py
mrzecest/: ec_boundary.py  est_ec_boundary - Copy.py
src/mrzecest/: __init__.py  ec_boundary.py  ec_boundary_fit_gee.py  ec_boundary_fit_gekko.py  ec_boundary_fit_scipy.py  fitting_util.py  util.py
