[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "mrzecest"
dynamic = ["version"] # Placeholder; versioneer will manage this
description = "Martinez EC Estimator"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
  {name = "Eli Ateljevich", email = "eli@water.ca.gov"},
  {name = "Lily Tomkovic", email = "lily.tomkovic@water.ca.gov"}
]
requires-python = ">=3.9"

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

keywords = ["Martinez", "Salinity", "EC", "Estimation", "Hydrodynamics"]

dependencies = [
    "vtools3>=3.8",
    # "dms-datastore",
    "xarray",
    "scipy>=1.8,<1.11",
    "matplotlib",
    "pyproj",
    "click",
    "pandas",
    "bokeh>=2.4",
    "matplotlib",
    "dask>=2022.11,<2023.5",
    "numpy>=1.23",
    "numba",
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "numpydoc"
]
test = [
    "pytest>=3",
  "pytest-cov",
    "tox",
    "click"
]



[project.urls]
repository = "https://github.com/eli/mrzecest"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  # This covers both typing.TYPE_CHECKING and plain TYPE_CHECKING, with any amount of whitespace
  "if\\s+(typing\\.)?TYPE_CHECKING:",
  'if __name__ == "__main__":'
]
omit = [
  "src/mrzecest/__main__.py",
  "src/mrzecest/_version.py",
  "tests/*"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "--color=yes",
  "--cov-append",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov=mrzecest",
  "--tb=native",
  "--strict-markers",
  "--durations=20"
]
markers = [
  "serial: execute test serially (to avoid race conditions)",
  "slow: tests can take a long time (deselect with '-m \"not slow\"')"
]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe", "examples", "env", "envs", "scripts"]
